# openCONFIGURATOR

./: .gitignore
openCONFIGURATORSoln/: CMakeLists.txt  openCONFIGURATOR.doxyfile  openCONFIGURATOR.sln
openCONFIGURATORSoln/libxml2/: lib.rar  readme.txt
openCONFIGURATORSoln/openCONFIGLIB/: Maincode.cpp  openCONFIGLIB.vcproj  test.cpp
openCONFIGURATORSoln/openCONFIGURATOR/: CMakeLists.txt  openCONFIGURATOR.vcproj  openconfigurator.i
openCONFIGURATORSoln/openCONFIGURATOR/Include/: APIOperations.h  Application.h  ApplicationProcess.h  BaseIndex.h  ComplexDataType.h  DataTypeCollection.h  Declarations.h  Error.h  Exception.h  Exports.h  Index.h  IndexCollection.h  Internal.h  NetworkManagement.h  Node.h  NodeCollection.h  ObjectDictionary.h  ProcessImage.h  ProjectSettings.h  Socket.h  StackOperations.h  SubIndex.h  TCollection.h  Validation.h  openCONFIGURATOR.h  openCONFIGURATOR_wrap.cxx  template.h
openCONFIGURATORSoln/openCONFIGURATOR/src/: APIOperations.cpp  Application.cpp  ApplicationProcess.cpp  BaseIndex.cpp  ComplexDataType.cpp  DataTypeCollection.cpp  Error.cpp  Evaluate.cpp  Exception.cpp  Index.cpp  IndexCollection.cpp  Main.cpp  Makefile  NetworkManagement.cpp  Node.cpp  NodeCollection.cpp  ObjectDictionary.cpp  ProcessImage.cpp  ProjectSettings.cpp  StackOperations.cpp  SubIndex.cpp  Tcl_WrapperMain.cpp  Test.cpp  Utility.cpp  Validation.cpp  XdcOperations.cpp  compile_Linux.sh  make
openCONFIGURATORSoln/openCONFIGURATORWrapper/: CMakeLists.txt  openconfiguratorWrapper.i
openCONFIGURATORSoln/openCOnfiguratorWrapper/: Makefile  compile_Wrapper.sh  createSWIGWrapper.sh  openCOnfiguratorWrapper.vcproj  openconfiguratorWrapper.i  openconfiguratorWrapper_wrap.cxx  openconfigurator_wrap.cxx
